--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 </head>
 <body>
 
-<h1>Bonjour à toutes et à tous</h1>
+<h1>bien venue au site web de Adel</h1>
 <p> Voilà un premier exemple d'une page statique hebergé dans le serveur de github</p>
-<h2>Url de la page est ...  </h2>
-<p>https://rbabari.github.io/test-web-GR1268/</p>
+
 
 </body>
 </html>
