--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bienvenu dans site adel </title>
+<title>Bienvenu sur le site Adel </title>
 </head>
 <body>
 <div>
   <ul>
-  <li>axxeuil</li>
-  <li>page1</li>
-  <li>page2</li>
-  <li>page3</li>
+    <li><a href='./index.html'>acceuil</a></li>
+    <li><a href='./doc/page1.html'>page1</a></li>
+    <li><a href='./doc/page2.html'>page2</a></li>
+    <li><a href='./doc/page3.html'>page3</a></li>
   </ul>
 </div>
+  
 <h1>bienvenue au site web de Adel </h1>
 
 </body>
