--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Bienvenu sur le site Adel </title>
 </head>
 <body>
+<h1>vous etes sur le site web de Adel</h1>
 <div>
   <ul>
     <li><a href='./index.html'>acceuil</a></li>
