--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Bienvenu sur le site Adel </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil</title>
 </head>
 <body>
-<h1>vous etes sur le site web de Adel</h1>
-<div>
-  <ul>
-    <li><a href='./index.html'>acceuil</a></li>
-    <li><a href='./doc/page1.html'>page1</a></li>
-    <li><a href='./doc/page2.html'>page2</a></li>
-    <li><a href='./doc/page3.html'>page3</a></li>
-  </ul>
-</div>
-  
-
+    <h1>Bienvenue sur notre site!</h1>
+    <p>Choisissez une page :</p>
+    <ul>
+        <li><a href="page1.html">Page 1</a></li>
+        <li><a href="page2.html">Page 2</a></li>
+        <li><a href="page3.html">Page 3</a></li>
+    </ul>
 </body>
 </html>
