--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <title>Page d'accueil</title>
 </head>
 <body>
-    <h1>Bienvenue sur notre site!</h1>
-    <p>Choisissez une page :</p>
-    <ul>
-        <li><a href="page1.html">Page 1</a></li>
-        <li><a href="page2.html">Page 2</a></li>
-        <li><a href="page3.html">Page 3</a></li>
-    </ul>
+    <h1>Bienvenue sur la page d'accueil</h1>
+    <p><a href="dco/page1.html">Page 1</a></p>
+    <p><a href="dco/page2.html">Page 2</a></p>
+    <p><a href="dco/page3.html">Page 3</a></p>
 </body>
 </html>
