--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'accueil</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>Bienvenue sur la page d'accueil</h1>
-    <p><a href="dco/page1.html">Page 1</a></p>
-    <p><a href="dco/page2.html">Page 2</a></p>
-    <p><a href="dco/page3.html">Page 3</a></p>
+    <h1>Page d'accueil</h1>
+    <p><a href="doc/page1.html">Page 1</a></p>
+    <p><a href="doc/page2.html">Page 2</a></p>
+    <p><a href="doc/page3.html">Page 3</a></p>
 </body>
 </html>
-
