--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
+     <style>
+    .textrouge
+    {
+        color:red;
+    }
+        
 </head>
 <body>
-    <h1>Page d'accueil</h1>
+    <h1 class = "textrouge"> Page d'accueil</h1>
     <p><a href="doc/page1.html">Page 1</a></p>
     <p><a href="doc/page2.html">Page 2</a></p>
     <p><a href="doc/page3.html">Page 3</a></p>
