couleur verte index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
         .textrouge {
             color: red;
         }
+
+        .textvert {
+            color: green;
+        }
     </style>
 </head>
 <body>
+    <p class="textvert">Bienvenue dans notre univers</p>
     <h1 class="textrouge">Page d'accueil</h1>
+   
     <p><a href="doc/page1.html">Page 1</a></p>
     <p><a href="doc/page2.html">Page 2</a></p>
     <p><a href="doc/page3.html">Page 3</a></p>
