--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         .textvert {
             color: green;
+            font-size: 1.5em; /* Ajustez la taille de la police selon vos préférences */
+            font-weight: bold;
         }
     </style>
 </head>
