--- a/index.html
+++ b/index.html
@@ -6,23 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
     <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em;
+        }
+
         .textrouge {
             color: red;
+            text-align: center;
+            margin-top: 0;
         }
 
         .textvert {
             color: green;
-            font-size: 1.5em; /* Ajustez la taille de la police selon vos préférences */
+            font-size: 1.5em;
             font-weight: bold;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        p {
+            margin: 10px 0;
+        }
+
+        a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <p class="textvert">Bienvenue dans notre univers</p>
-    <h1 class="textrouge">Page d'accueil</h1>
+
+    <header>
+        <h1>Ma Page Web</h1>
+    </header>
+
+    <section>
+        <p class="textvert">Bienvenue dans notre univers</p>
+        <h1 class="textrouge">Page d'accueil</h1>
    
-    <p><a href="doc/page1.html">Page 1</a></p>
-    <p><a href="doc/page2.html">Page 2</a></p>
-    <p><a href="doc/page3.html">Page 3</a></p>
+        <p><a href="doc/page1.html">Page 1</a></p>
+        <p><a href="doc/page2.html">Page 2</a></p>
+        <p><a href="doc/page3.html">Page 3</a></p>
+    </section>
+
+    <footer>
+        <p>© 2024 Ma Page Web. Tous droits réservés.</p>
+    </footer>
+
 </body>
 </html>
